ec2-script-advanced/modules/ec2/main.tf
provider "aws" {
  region = var.aws_region
}

resource "aws_security_group" "sg_ssh_http" {
  name = "allow_ssh_http"
  description = "Allow SSH and HTTP"
  vpc_id = var.vpc_id

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}


resource "aws_instance" "web" {
  ami           = var.ami_id
  instance_type = var.instance_type
  subnet_id     = var.subnet_id
  vpc_security_group_ids = [aws_security_group.sg_ssh_http.id]

  tags = {
    Name = "Terraform-EC2"
  }
}
